--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,63 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>cleanphl-updates</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/ui-lightness/jquery-ui.css">
+    <link rel="stylesheet" href="//unpkg.com/phila-standards@1.0.2/dist/css/phila-app.min.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but cleanphl-updates doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app"></div> -->
     <!-- built files will be auto injected -->
+
+    <div class="grid-y medium-grid-frame" id="application">
+      <!-- Begin header -->
+      <header class="site-header app group">
+        <div class="row expanded">
+          <div class="columns">
+            <a href="//beta.phila.gov" class="logo">
+              <img src="//standards.phila.gov/img/logo/city-of-philadelphia-yellow-white.png" alt="City of Philadelphia">
+            </a>
+            <div class="app-divide"></div>
+            <div class="page-title-container">
+              <a href="#/">
+                <h1 class="page-title">Atlas</h1>
+              </a>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <!-- Mapboard -->
+      <div id="mapboard"></div>
+
+      <!-- Footer -->
+      <div class="app-footer">
+        <!-- remove the anchor class if you want to handle footer placement yourself, otherwise it will be postion: fixed -->
+        <footer>
+          <div class="row expanded">
+            <div class="columns">
+              <nav>
+                <ul class="inline-list">
+                  <li>
+                    <a href="//bit.ly/phl-atlas-feedback">Feedback</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </footer>
+      </div>
+
+    </div><!-- end of application div -->
+
+    <!-- JS: Foundation -->
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
   </body>
 </html>
