--- a/public/index.html
+++ b/public/index.html
@@ -63,5 +63,11 @@
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
+    <!-- JS: Cyclomedia -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ol3/4.1.0/ol.js"></script>
+    <script src="//s3.amazonaws.com/cyclomedia-mapboard/cyclomedia-mapboard.js"></script>
+
   </body>
 </html>
